2006-12-29  Brian Cameron  <Brian.Cameron@sun.com>

	* Patch to add revnumber and date to GDM docs.  Patch by 
	  Paul <ephraim_owns@hotmail.com>.  Helps to fix bug
	  #389931.

2006-12-29  Lukasz Zalewski  <lukas@dcs.qmul.ac.uk>
	
	* gui/gdmsetup.c: Fixed minor bug which allowed users
	  with uid lower than minimalUID to be added to the include
	  list, by adding them to the include list (not applying the
	  changes yet), changing the value of the minmalUID and then 
	  applying changes.  Fixes bug #390147.
	* gui/gdmsetup.c: Fix some memory leaks.
	  
2006-12-29  Brian Cameron  <brian.cameron@sun.com>

	* configure.ac, daemon/Makefile.am, daemon/misc.[ch], 
	  daemon/slave.c, daemon/verify-pam.c:  Now GDM will recognize 
	  when the system language has changed and when new GUI's are
	  displayed they will be in the new system language without 
	  neeting to restart GDM.  By default the /var/sysconfig/i18n
	  file is assumed to have the language defined in LANG=foo format.
	  The --with-lang-file configure option may be needed to specify
	  a different system language configuration file.  On Solaris
	  it would be /etc/default/init, for example.  Note the change
	  to verify-pam is done to flush the hash table of pam messages
	  to useful translations.  This change implements enhancement
	  request #384603.  Patch by Ray Strode <rstrode@redhat.com>
	  and Takao Fujiwara <Takao.Fujiwara@sun.com>. 

2006-12-21  Lukasz Zalewski  <lukas@dcs.qmul.ac.uk>

	* More fixes/changes for bug/feature request #334186.
	* gui/gdmsetup.c: Fixed minor bug which resulted in a
	  warning related to the incorrect config value being displayed
	  when one of the custom command fields was toggled
	  gui/gdmsetup.glade: Minor changes in the commands dialog. for each
	  of the entry widgets added text explaining briefly its purpose (that
	  is besides the tooltip)
	
2006-12-16  Brian Cameron  <brian.cameron@sun.com>

	* gui/greeter/greeter_canvas_item.c, gui/greeter/greeter_system.c: