@@ -8,6 +8,13 @@
   <articleinfo>
     <title>Manual de referencia del Gestor de entrada de GNOME</title>
 
+    <revhistory>
+      <revision>
+        <revnumber>0.0</revnumber>
+        <date>2006-12</date>
+      </revision>
+    </revhistory>
+
     <abstract role="description">
       <para>GDM es el Gestor de entrada de GNOME, un programa gráfico de entrada.</para>
     </abstract>
