@@ -8,6 +8,13 @@
   <articleinfo>
     <title>Посібник з менеджера дисплїв середовища Gnome</title>
 
+    <revhistory>
+      <revision>
+        <revnumber>0.0</revnumber>
+        <date>2006-12</date>
+      </revision>
+    </revhistory>
+
     <abstract role="description">
       <para>GDM - менеджер дисплеїв GNOME, графічна програма входу у сеанс.</para>
     </abstract>
